crates/core/tests/snapshots/container_schema_test__schema_type__unnamed_enum__supports_internal_tag.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .union(
            UnionType::from_named_schemas(
                [
                    (
                        "Text".into(),
                        {
                            let mut item = {
                                let mut item = schema.infer::<String>();
                                item.ty
                                    .add_field(
                                        "type",
                                        SchemaField::new(
                                            Schema::literal_value(LiteralValue::String("Text".into())),
                                        ),
                                    );
                                item
                            };
                            item.description = Some("Docs.".into());
                            item
                        },
                    ),
                    (
                        "List".into(),
                        {
                            let mut item = schema.infer::<Vec<String>>();
                            item.ty
                                .add_field(
                                    "type",
                                    SchemaField::new(
                                        Schema::literal_value(LiteralValue::String("List".into())),
                                    ),
                                );
                            item
                        },
                    ),
                    (
                        "Pair".into(),
                        {
                            let mut item = Schema::tuple(
                                TupleType::new([
                                    schema.infer::<usize>(),
                                    schema.infer::<bool>(),
                                ]),
                            );
                            item.ty
                                .add_field(
                                    "type",
                                    SchemaField::new(
                                        Schema::literal_value(LiteralValue::String("Pair".into())),
                                    ),
                                );
                            item
                        },
                    ),
                    (
                        "Inner".into(),
                        {
                            let mut item = {
                                let mut item = schema.infer_as_nested::<NestedConfig>();
                                item.ty
                                    .add_field(
                                        "type",
                                        SchemaField::new(
                                            Schema::literal_value(LiteralValue::String("Inner".into())),
                                        ),
                                    );
                                item
                            };
                            item.partialize();
                            item
                        },
                    ),
                    (
                        "InnerOpt".into(),
                        {
                            let mut item = {
                                let mut item = schema
                                    .infer_as_nested::<Option<NestedConfig>>();
                                item.ty
                                    .add_field(
                                        "type",
                                        SchemaField::new(
                                            Schema::literal_value(
                                                LiteralValue::String("InnerOpt".into()),
                                            ),
                                        ),
                                    );
                                item
                            };
                            item.partialize();
                            item
                        },
                    ),
                    (
                        "InnerList".into(),
                        {
                            let mut item = {
                                let mut item = schema
                                    .infer_as_nested::<Vec<NestedConfig>>();
                                item.ty
                                    .add_field(
                                        "type",
                                        SchemaField::new(
                                            Schema::literal_value(
                                                LiteralValue::String("InnerList".into()),
                                            ),
                                        ),
                                    );
                                item
                            };
                            item.partialize();
                            item
                        },
                    ),
                    (
                        "InnerMap".into(),
                        {
                            let mut item = {
                                let mut item = schema
                                    .infer_as_nested::<HashMap<String, CustomConfig>>();
                                item.ty
                                    .add_field(
                                        "type",
                                        SchemaField::new(
                                            Schema::literal_value(
                                                LiteralValue::String("InnerMap".into()),
                                            ),
                                        ),
                                    );
                                item
                            };
                            item.partialize();
                            item
                        },
                    ),
                    (
                        "Unit".into(),
                        Schema::structure(
                            StructType::new([
                                (
                                    "type".into(),
                                    Schema::literal_value(LiteralValue::String("Unit".into())),
                                ),
                            ]),
                        ),
                    ),
                ],
                Some(2usize),
            ),
        )
}
