crates/core/tests/snapshots/container_schema_test__schema_type__unnamed_enum__supports_untagged.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .union(
            UnionType::from_named_schemas(
                [
                    (
                        "Text".into(),
                        {
                            let mut item = schema.infer::<String>();
                            item.description = Some("Docs.".into());
                            item
                        },
                    ),
                    ("List".into(), schema.infer::<Vec<String>>()),
                    (
                        "Pair".into(),
                        Schema::tuple(
                            TupleType::new([
                                schema.infer::<usize>(),
                                schema.infer::<bool>(),
                            ]),
                        ),
                    ),
                    ("Inner".into(), schema.infer_as_nested::<NestedConfig>()),
                    (
                        "InnerOpt".into(),
                        schema.infer_as_nested::<Option<NestedConfig>>(),
                    ),
                    ("InnerList".into(), schema.infer_as_nested::<Vec<NestedConfig>>()),
                    (
                        "InnerMap".into(),
                        schema.infer_as_nested::<HashMap<String, CustomConfig>>(),
                    ),
                    ("Unit".into(), Schema::null()),
                ],
                Some(2usize),
            ),
        )
}
