crates/core/tests/snapshots/container_schema_test__schema_type__unnamed_enum__supports_variant_untagged.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty_body(container.impl_schematic_type())
---
fn build_schema(mut schema: SchemaBuilder) -> Schema {
    schema
        .union(
            UnionType::from_schemas(
                [
                    {
                        let mut item = schema.infer::<String>();
                        item.ty
                            .add_field(
                                "type",
                                SchemaField::new(
                                    Schema::literal_value(LiteralValue::String("Text".into())),
                                ),
                            );
                        item
                    },
                    schema.infer::<String>(),
                    schema.infer::<String>(),
                ],
                None,
            ),
        )
}
